# xwschema

./: .gitignore  .pre-commit-version-check.py  MANIFEST.in  README.md  SCHEMA_FORMATS_NEEDED.md  VALIDATION_VERIFICATION.md  pyproject.toml  pyproject.xwschema.toml  pytest.ini  requirements.txt
.github/: workflows-config.yaml
.github/workflows/: publish.yml
MIGRAT/xschema/: __init__.py
MIGRAT/xschema/handlers/: __init__.py  json_schema_handler.py  numpy_schema_handler.py  toml_schema_handler.py  xml_schema_handler.py  yaml_schema_handler.py
MIGRAT/xschema/legacy/: __init__.py  config.py  engine.py  facade.py  schema_handler.py  validation.py  validators.py  versioning.py
MIGRAT/xschema/legacy/backup/: validators.py  versioning.py  xschema.py  xschema_handler.py
MIGRAT/xschema/new/: __init__.py  facade.py  model.py
MIGRAT/xschema/new/core/: __init__.py  config.py  errors.py  facade.py  model.py  unified_utils.py
MIGRAT/xschema/new/schema/: __init__.py  facade.py  model.py
MIGRAT/xschema/new_2/: __init__.py  facade.py  model.py
MIGRAT/xschema/new_2/core/: __init__.py  errors.py  facade.py  model.py  unified_utils.py
MIGRAT/xschema/new_2/schema/: __init__.py  facade.py
MIGRAT/xschema/new_3/: __init__.py  facade.py  schema.py
MIGRAT/xschema/new_3/factory/: __init__.py  factory.py
MIGRAT/xschema/new_3/model/: __init__.py  base.py  schema.py
MIGRAT/xschema/new_3/performance/: __init__.py  hashing.py
MIGRAT/xschema/tests/unit/: README.md  __init__.py
MIGRAT/xschema/tests/unit/00_core_tests/: __init__.py  conftest.py  runner.py  test_xschema_core.py
MIGRAT/xschema/tests/unit/00_core_tests/data/: invalid_data.json  sample_data.json  sample_schema.json
MIGRAT/xschema/tests/unit/01_performance_tests/: README.md  __init__.py  conftest.py  library_analysis.py  performance_summary.md  runner.py  simple_caching_test.py  test_caching_investigation.py  test_xschema_performance.py  version_comparison_summary.md
benchmarks/: INDEX.md
benchmarks/20260209-benchmark legacy formats/benchmarks/: BENCH_20251217_000000_000_LEGACY_FORMATS_SUMMARY.md
docs/: GUIDE_01_USAGE.md  INDEX.md  PROJECT_PHASES.md  REF_01_REQ.md  REF_11_COMP.md  REF_12_IDEA.md  REF_13_ARCH.md  REF_14_DX.md  REF_15_API.md  REF_21_PLAN.md  REF_22_PROJECT.md  REF_35_REVIEW.md  REF_50_QA.md  REF_51_TEST.md  REF_54_BENCH.md
docs/_archive/: README.md
docs/changes/: CHANGE_202501XX_MIGRAT_VERIFICATION.md  CHANGE_20260207_DOCS_ROOT_STANDARD.md  CHANGE_20260208_ARCHIVE_MIGRATION_TO_REFS_AND_LOGS.md
docs/logs/benchmarks/: INDEX.md  MOVED_TO_ROOT.md
docs/logs/reviews/: REVIEW_20250100_000000_000_MIGRAT_MIGRATION_VERIFICATION.md  REVIEW_20260207_120000_000_REQUIREMENTS.md  REVIEW_20260207_170000_000_DOCS_CODE_TESTS_EXAMPLES_BENCH_GAP.md  REVIEW_20260207_PROJECT_STATUS.md
docs/logs/tests/: INDEX.md  TEST_20251217_194056_000_CORE_LAYER_RUN.md  TEST_20260208_114608_630_SUMMARY.md  TEST_20260208_114727_032_SUMMARY.md  TEST_20260313_023114_478_SUMMARY.md  TEST_20260319_025500_951_SUMMARY.md  TEST_20260319_025836_648_SUMMARY.md  TEST_20260322_165558_746_SUMMARY.md  TEST_20260322_165811_279_SUMMARY.md  TEST_20260322_171221_652_SUMMARY.md  TEST_20260322_172146_900_SUMMARY.md  TEST_20260322_173104_182_SUMMARY.md  TEST_20260322_174126_131_SUMMARY.md  TEST_20260322_175049_354_SUMMARY.md  TEST_20260322_180004_036_SUMMARY.md  TEST_20260322_180830_887_SUMMARY.md  TEST_20260322_181708_541_SUMMARY.md  TEST_20260322_182737_510_SUMMARY.md  TEST_20260322_183534_191_SUMMARY.md  TEST_20260322_184325_299_SUMMARY.md  TEST_20260322_185124_471_SUMMARY.md  TEST_20260322_185932_570_SUMMARY.md  TEST_20260327_181732_818_SUMMARY.md  TEST_20260327_181852_300_SUMMARY.md  TEST_20260327_181929_520_SUMMARY.md  TEST_20260408_145157_967_SUMMARY.md
examples/simple_examples/: mail_server_openapi.json  openapi_mail_schema.json  xwschema_dx.py  xwschema_dx_openapi.py  xwschema_examples.py  xwschema_parts.py  xwschema_parts_benchmark.py
src/: xschema.py  xwschema.py
src/exonware/xwschema/: __init__.py  base.py  base_types.py  builder.py  config.py  contracts.py  defs.py  engine.py  entity_schema.json  errors.py  facade.py  generator.py  type_utils.py  types_base.py  validator.py  version.py
src/exonware/xwschema/common/: validation_rules.py
src/exonware/xwschema/facades/: __init__.py  baas.py
src/exonware/xwschema/fastapi_routes/: __init__.py  types.py
src/exonware/xwschema/formats/: __init__.py  base.py
src/exonware/xwschema/formats/schema/: __init__.py  avro_schema.py  graphql_schema.py  json_schema.py  openapi_schema.py  protobuf_schema.py  swagger_schema.py  wsdl_schema.py  xsd_schema.py
src/exonware/xwschema/formats/schemas/: __init__.py  schema_registry.py
src/exonware/xwschema/operations/: __init__.py  conversion_pipeline.py  format_conversion.py  schema_transformer.py  validation_pipeline.py
src/exonware/xwschema/registry/: __init__.py  base.py  catalog.py  defs.py  discovery.py  enhanced_registry.py  errors.py  schema_registry.py
tests/: __init__.py  conftest.py  runner.py  test_types_base.py  verify_installation.py
tests/0.core/: __init__.py  conftest.py  runner.py  test_builder.py  test_core.py  test_engine.py  test_facade.py  test_generator.py  test_schema_roundtrip.py  test_schema_utilities.py  test_validator.py
tests/1.unit/: __init__.py  runner.py  test_base_formats.py  test_config.py  test_formats.py
tests/1.unit/engine_tests/: __init__.py  test_format_conversion.py
tests/1.unit/formats_tests/: test_graphql_schema_parsing.py  test_protobuf_schema_parsing.py
tests/1.unit/registry_tests/: __init__.py  test_catalog.py  test_schema_registry.py
tests/2.integration/: __init__.py  runner.py  test_end_to_end.py
tests/3.advance/: __init__.py  conftest.py  runner.py  test_handler_caching.py  test_performance.py
