
# Source size (src/*): ~351.6 KB
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[project]
  name = "exonware-xwschema"
  dynamic = ["version"]
  description = "Schema validation and data structure definition library"
  readme = "README.md"
  requires-python = ">=3.12"
  keywords = ["schema", "validation", "structure", "definition", "data-types", "exonware"]
  classifiers = []
  dependencies = []
  exonware-xwdata = "514480 ; 0.49 MB"
  authors = []
  "{ name" = "eXonware Backend Team"

  [project.license]
    text = "MIT"

  [project.optional-dependencies]
    dev = []
    "black>" = "23.0.0\",  # file-size=3914855 ; 3.73 MB"
    "exonware-xwdata[dev]" = "197551718 ; 188.40 MB"
    exonware-xwlazy = "349706 ; 0.33 MB"
    "isort>" = "5.12.0\",  # file-size=568232 ; 0.54 MB"
    "mypy>" = "1.0.0\",  # file-size=29775254 ; 28.40 MB"
    "pytest>" = "7.0.0\",  # file-size=3152415 ; 3.01 MB"
    "pytest-asyncio>" = "0.21.0\",  # file-size=46752 ; 0.04 MB"
    "pytest-cov>" = "4.0.0\",  # file-size=71639 ; 0.07 MB"
    lazy = []
    "exonware-xwdata[lazy]" = "9909043 ; 9.45 MB"
    full = ["brotlicffi", "chardet", "simplejson", "socks", "awscrt", "numpy", "scikit-learn", "cython", "lz4", "uarray", "pandas", "pytz", "pyarrow", "cloudpickle", "numexpr", "bottleneck", "regex", "atomicwrites", "interegular"]
    aiofiles = "81991 ; 0.08 MB"
    attrs = "440438 ; 0.42 MB"
    bcrypt = "329770 ; 0.31 MB"
    brotli = "868889 ; 0.83 MB"
    cachebox = "971831 ; 0.93 MB"
    cachetools = "105183 ; 0.10 MB"
    cbor2 = "406858 ; 0.39 MB"
    cryptography = "10265860 ; 9.79 MB"
    dicttoxml = "96721 ; 0.09 MB"
    "exonware-xwdata[full]" = "628264796 ; 599.16 MB"
    httpx = "765633 ; 0.73 MB"
    hyperlight_hyperjson = "261754 ; 0.25 MB"
    json5 = "377396 ; 0.36 MB"
    msgpack = "238387 ; 0.23 MB"
    msgspec = "525449 ; 0.50 MB"
    opentelemetry-api = "423339 ; 0.40 MB"
    orjson = "289443 ; 0.28 MB"
    psutil = "2104166 ; 2.01 MB"
    pylru = "74244 ; 0.07 MB"
    pymongo = "6208897 ; 5.92 MB"
    PyYAML = "730195 ; 0.70 MB"
    rich = "2130726 ; 2.03 MB"
    tomli = "288072 ; 0.27 MB"
    tomli-w = "25350 ; 0.02 MB"
    xmltodict = "65213 ; 0.06 MB"
    zstandard = "1384115 ; 1.32 MB"

  [project.urls]
    Homepage = "https://exonware.com"
    Repository = "https://github.com/exonware/xwschema"
    Documentation = "https://github.com/exonware/xwschema#readme"
    Subtree = "https://github.com/exonware/xwschema.git"

  [project.entry-points]

    [project.entry-points.xwsystem]

      [project.entry-points.xwsystem.schema_validators]
        xwschema = "exonware.xwschema.validator:get_schema_validator"

[tool]

  [tool.black]
    line-length = 88
    target-version = ["py38"]

  [tool.isort]
    profile = "black"
    line_length = 88

  [tool.mypy]
    python_version = "0.4.0.2"
    mypy_path = "src"
    strict = true
    warn_return_any = true
    warn_unused_configs = true
    disallow_untyped_defs = true
    disallow_any_generics = true
    disallow_untyped_calls = true
    disallow_incomplete_defs = true
    check_untyped_defs = true
    disallow_untyped_decorators = true
    no_implicit_optional = true
    warn_redundant_casts = true
    warn_unused_ignores = true
    warn_no_return = true
    warn_unreachable = true

  [tool.pytest]

    [tool.pytest.ini_options]
      testpaths = ["tests"]
      python_files = ["test_*.py"]
      python_classes = ["Test*"]
      python_functions = ["test_*"]
      addopts = "-v --tb=short -x --strict-markers"
      markers = []

  [tool.hatch]

    [tool.hatch.version]
      path = "src/exonware/xwschema/version.py"

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          packages = ["src/exonware"]
          py-modules = ["src/xwschema"]

        [tool.hatch.build.targets.sdist]
          include = []
