
# Source size (src/*): ~352.6 KB
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exonware-xwschema"
dynamic = ["version"]
description = "Schema validation and data structure definition library"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["schema", "validation", "structure", "definition", "data-types", "exonware"]
classifiers = []
dependencies = [
  "exonware-xwsystem==0.9.0.39",
  "exonware-xwdata==0.9.0.17",
]
authors = [
  { name = "eXonware Backend Team", email = "connect@exonware.com" },
]

[project.license]
text = "Apache-2.0"

[project.optional-dependencies]
# First-party XW libs composed by this package (excludes exonware-xwsystem==0.9.0.37; see lazy/full).
xw = [
  "exonware-xwdata==0.9.0.17",
]
lazy = [
  "exonware-xwschema[xw]==0.4.0.11",
  "exonware-xwlazy==1.0.1.81",
  "exonware-xwsystem[lazy]==0.9.0.39",
  "exonware-xwdata[xw]==0.9.0.17",
]
full = [
  "exonware-xwschema[xw]==0.4.0.11",
  "exonware-xwsystem[full]==0.9.0.39",
  "exonware-xwdata[xw]==0.9.0.17",
]
dev = [
  "exonware-xwschema[full]==0.4.0.11",
  "black>=23.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://exonware.com"
Repository = "https://github.com/exonware/xwschema"
Documentation = "https://github.com/exonware/xwschema#readme"
Subtree = "https://github.com/exonware/xwschema.git"

[project.entry-points."xwsystem.schema_validators"]
xwschema = "exonware.xwschema.validator:get_schema_validator"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short -x --strict-markers"
markers = []

[tool.hatch.version]
path = "src/exonware/xwschema/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/exonware"]
py-modules = ["src/xwschema"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.github"]
